# rust-wasm-starter

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  MVP_SPEC.md  README.md  index.html  main.js  netlify.toml  nixpacks.toml  package-lock.json  package.json  railway.toml  vite.config.js
src/: lib.rs  main.rs
