[package]
name = "rust-wasm-hello"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "js"] }
js-sys = "0.3"

# Server dependencies (only for binary builds)
tokio = { version = "1.0", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
futures-util = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
anyhow = { version = "1.0", optional = true }
dashmap = { version = "5.5", optional = true }
rand = { version = "0.8", optional = true }
hyper = { version = "1.0", features = ["full"], optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }
http-body-util = { version = "0.1", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "BinaryType",
  "Blob",
  "FileReader",
]

[features]
default = []
server = [
  "tokio", 
  "tokio-tungstenite", 
  "futures-util", 
  "tracing", 
  "tracing-subscriber", 
  "anyhow", 
  "dashmap", 
  "rand",
  "hyper",
  "hyper-util", 
  "http-body-util",
  "tower",
  "tower-http"
] 